--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script type="text/javascript" src="./logic.js"></script>
+  <script type="text/javascript" src="./logic.js" defer></script>
 </head>
 <body>
+  <button class="playerSelectButton" id="selectRockButton">Rock</button>
+  <button class="playerSelectButton" id="selectPaperButton">Paper</button>
+  <button class="playerSelectButton" id="selectScissorsButton">Scissors</button>
+
+  <div id="resultDisplay"></div>
   
-  
+
 </body>
 </html>
