--- a/index.html
+++ b/index.html
@@ -5,13 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script type="text/javascript" src="./logic.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <button class="playerSelectButton" id="selectRockButton">Rock</button>
-  <button class="playerSelectButton" id="selectPaperButton">Paper</button>
-  <button class="playerSelectButton" id="selectScissorsButton">Scissors</button>
 
-  <div id="resultDisplay"></div>
+  <div class="titleBar">
+    <h1>Rock Paper Scissors Game</h1>
+  </div>
+
+  <div class="instructionsBar">
+    Make your choice using any of the 3 buttons below. First to 5 wins!
+  </div>
+
+  <div class="gamePlayContainer">
+
+    <div class="scoreContainer">
+      <div class="scoreTitle">
+        <p>Player Score</p>
+      </div>
+      <div class="scoreDisplay">
+        <p>3</p>
+      </div>
+    </div>
+
+    <div class="rpsButtons">
+      <button class="playerSelectButton" id="selectRockButton">Rock</button>
+      <button class="playerSelectButton" id="selectPaperButton">Paper</button>
+      <button class="playerSelectButton" id="selectScissorsButton">Scissors</button>
+    </div>
+
+    <div class="scoreContainer">
+      <div class="scoreTitle">
+        <p>Computer Score</p>
+      </div>
+      <div class="scoreDisplay">
+        <p>3</p>
+      </div>
+    </div>
+
+  </div>
+
+  <div id="resultDisplay">
+    <p style="font-size: 20px"><b>Result for the round...</b></p>
+  </div>
+
+  <div class="restartContainer">
+    <button class="restartButton">Restart the game at any time</button>
+  </div>
   
 
 </body>
